--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^2.14.12"
   },
   "devDependencies": {
+    "@nuxtjs/storybook": "^3.3.1",
     "@nuxtjs/tailwindcss": "^3.4.2"
   }
 }
